syntax = "proto3";
option java_multiple_files = true;
package com.edu.grpc;

message CreateUserRequest {
  string email = 1;
  string firstName = 2;
  string lastName = 3;
  string phoneNumber = 4;
  string password = 5;
}

message CreateUserResponse {
  string jwtToken = 1;
}

service AuthService {
  rpc createUser(CreateUserRequest) returns (CreateUserResponse);
}
